--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -1,6 +1,6 @@
 {% extends "layouts/base.njk" %}
 
-{% block page_title %}Web Components Club article{% endblock %}
+{% block page_title %}Web Components Club{% endblock %}
 
 {% block content %}
     <main id="main-content">
