--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,8 +4,9 @@
 
 {% block content %}
     <main id="main-content">
-        <article class="generic-content">
-            <h2 class="heading heading--primary">{{ title }}</h2>
+        <article>
+            <h2>{{ title }}</h2>
+            <p class="date"><time datetime="{{ date }}">{{ date | date }}</time></p>
             {{ content | safe }}
         </article>
     </main>
