--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,5 +1,7 @@
 {% extends "layouts/base.njk" %}
 
+{% block page_title %}A web components learning journal{% endblock %}
+
 {% block content %}
     <main id="main-content">
         <section class="post-list">
