Add a bit of styling

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title }} - Web Components Club</title>
+    <style>{% include "assets/css/global.css" %}</style>
 </head>
 <body>
-    <header role="banner">
-        <h1 class="visually-hidden">{% block page_title %}{% endblock %}</h1>
-        <a href="#main-content">Skip to main content</a>
-        <nav>
-            <ul>
-                {% for item in nav.items %}
-                    <li>
-                        <a href="{{ item.url }}"{{ 'rel=external' if item.external }}>{{ item.text }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </nav>
-    </header>
-    {% block content %}
-    {% endblock content %}
-    <footer role="contentinfo">
-        <p>A project by <a href="//twitter.com/hankchizljaw" rel="external">HankChizlJaw</a></p>
-    </footer>
+    <div class="wrapper">
+        <header role="banner">
+            <h1>Web Components Club</h1>
+            <a class="visually-hidden" href="#main-content">Skip to main content</a>
+            <nav>
+                <ul>
+                    {% for item in nav.items %}
+                        <li>
+                            <a href="{{ item.url }}"{{ 'rel=external' if item.external }}>{{ item.text }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </nav>
+        </header>
+        {% block content %}
+        {% endblock content %}
+        <footer role="contentinfo">
+            <p>A project by <a href="//twitter.com/hankchizljaw" rel="external">HankChizlJaw</a></p>
+        </footer>
+    </div>
 </body> 
 </html>
