--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title }} - Web Components Club</title>
     <style>{% include "assets/css/global.css" %}</style>
+    <link rel="alternate" href="https://webcomponents.club/feed/feed.xml" title="{{ feedTitle }}" type="Web Components Club" />
 </head>
 <body>
     <div class="wrapper">
