Tidy up page layout

--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -4,8 +4,8 @@
 
 {% block content %}
     <main id="main-content">
-        <article class="generic-content">
-            <h2 class="heading heading--primary">{{ title }}</h2>
+        <article>
+            <h2>{{ title }}</h2>
             {{ content | safe }}
         </article>
     </main>
