Add 11ty to footer

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -27,7 +27,7 @@
         {% endblock content %}
         <hr />
         <footer role="contentinfo">
-            <p>A project by <a href="//twitter.com/hankchizljaw" rel="external">HankChizlJaw</a></p>
+            <p>A project by <a href="//twitter.com/hankchizljaw" rel="external">HankChizlJaw</a> — Proudly powered by <a href="//11ty.io">11ty</a></p>
         </footer>
     </div>
 </body> 
