--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,6 +7,15 @@
     <title>{{ title }} - Web Components Club</title>
     <style>{% include "assets/css/global.css" %}</style>
     <link rel="alternate" href="https://webcomponents.club/feed/feed.xml" title="{{ feedTitle }}" type="Web Components Club" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/favicon-16x16.png" />
+    <link rel="manifest" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/site.webmanifest" />
+    <link rel="mask-icon" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/safari-pinned-tab.svg" color="#bd3617" />
+    <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#f3f3f3" />
+    <meta name="msapplication-config" content="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/browserconfig.xml" />
+    <meta name="theme-color" content="#f3f3f3" />
 </head>
 <body>
     <div class="wrapper">
