--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }} - Web Components Club</title>
     <style>{% include "assets/css/global.css" %}</style>
+    {% include 'meta-info.html' %}
     <link rel="alternate" href="https://webcomponents.club/feed/feed.xml" title="{{ feedTitle }}" type="Web Components Club" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/favicon-32x32.png" />
