--- a/_includes/meta-info.html
+++ b/_includes/meta-info.html
@@ -1,6 +1,6 @@
 {% set pageTitle = title + ' - Web Components Club' %}
 {% set siteTitle = 'Web Components Club' %}
-{% set currentUrl = 'https://webcomponents.club' + url %}
+{% set currentUrl = 'https://webcomponents.club' + page.url %}
 {% set image = 'https://s3-us-west-2.amazonaws.com/s.cdpn.io/174183/wc-share.png' %}
 
 <title>{{ pageTitle }}</title>
